Trying to fix overflow issues

--- a/src/ui/screens/workspace/panels/card/CardBody.styl
+++ b/src/ui/screens/workspace/panels/card/CardBody.styl
@@ -3,11 +3,11 @@
   flex: 1
   display: flex
   flex-direction: column
+  
+  .header
+    flex: none
+    min-height: 0px
     
-    .header
-      flex: none
-      min-height: 0px
-      
-    .contents
-      flex: 1
-      min-height: 100%
+  .contents
+    flex: 1
+    height: 1px
