--- a/src/ui/screens/workspace/panels/card/timeline/CardTimelineTab.styl
+++ b/src/ui/screens/workspace/panels/card/timeline/CardTimelineTab.styl
@@ -7,6 +7,7 @@
   font-size: 16px
   background: $color-white
   user-select: text
+  height: 100px
 
   &::before
     display: block
